@@ -33,6 +33,7 @@
 
 @interface RichXMLParser (Private)
 	-(void)reset;
+	-(NSData *)preFlightValidation:(NSData *)xmlData;
 	-(BOOL)initRSSFeed:(XMLParser *)feedTree isRDF:(BOOL)isRDF;
 	-(XMLParser *)channelTree:(XMLParser *)feedTree;
 	-(BOOL)initRSSFeedHeader:(XMLParser *)feedTree;
@@ -233,7 +234,7 @@
 {
 	BOOL success = NO;
 	NS_DURING
-	if ([self setData:xmlData])
+	if ([self setData:[self preFlightValidation:xmlData]])
 	{
 		XMLParser * subtree;
 		
@@ -253,6 +254,64 @@
 		success = NO;
 	NS_ENDHANDLER
 	return success;
+}
+
+/* preFlightValidation
+ * Try and sanitise the XML data before the XML parser gets a chance to reject it. This
+ * should address the most common bad-feed errors until we can change the parser to one
+ * that provides us more control.
+ */
+-(NSData *)preFlightValidation:(NSData *)xmlData
+{
+	int count = [xmlData length];
+	const char * srcPtr = [xmlData bytes];
+	const char * srcEndPtr = srcPtr + count;
+
+	// We'll create another data stream with the converted characters
+	int destSize = count;
+	NSMutableData * newXmlData = [NSMutableData dataWithLength:destSize];
+	char * destPtr = [newXmlData mutableBytes];
+
+	while (srcPtr < srcEndPtr)
+	{
+		unsigned char ch = *srcPtr++;
+		if (ch >= 0xC0 && ch <= 0xFD)
+		{
+			// Copy UTF-8 lead bytes unchanged. The parser can cope with
+			// these fine.
+			*destPtr++ = ch;
+			while (srcPtr < srcEndPtr && (*srcPtr & 0x80))
+				*destPtr++ = *srcPtr++;
+		}
+		else if (ch > 0x7F)
+		{
+			// Other characters with their high bits set are not valid UTF-8.
+			// But regardless of the encoding scheme, their entity equivalents
+			// are. So convert them into a hex entity character code.
+			[newXmlData setLength:destSize += 5];
+			*destPtr++ = '&';
+			*destPtr++ = '#';
+			*destPtr++ = 'x';
+			*destPtr++ = "0123456789ABCDEF"[(ch / 16)];
+			*destPtr++ = "0123456789ABCDEF"[(ch % 16)];
+			*destPtr++ = ';';
+		}
+		else if (ch == '&' && srcPtr < srcEndPtr && !isalpha(*srcPtr))
+		{
+			// Some feeds use a '&' outside of its intended use as an entity
+			// delimiter. So if '&' is followed by a non-alphanumeric, make it
+			// into its entity equivalent.
+			[newXmlData setLength:destSize += 4];
+			*destPtr++ = '&';
+			*destPtr++ = 'a';
+			*destPtr++ = 'm';
+			*destPtr++ = 'p';
+			*destPtr++ = ';';
+		}
+		else
+			*destPtr++ = ch;
+	}
+	return newXmlData;
 }
 
 /* initRSSFeed
